# raytracing-cpp

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  image.hpp  material.hpp  ray.hpp  sphere.hpp  utils.hpp  vec3.hpp
